--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,12 +9,16 @@ server {
 		root /home/box/web/public;
 	}
 
-	location / {
-		return 404;
-	}
+#	location / {
+#		return 404;
+#	}
 
 	location ^~ /hello/ {
 		proxy_pass http://127.0.0.1:8080;
+	}
+
+	location / {
+		proxy_pass http://0.0.0.0:8000;
 	}
 }
 
